src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_AuthorHistoryDetails_1.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Overview: some interesting description of the authorHe was born in Madison, Wisconsin: a city he has never really left.His first novel took him    │        
        │seven years to finish.                                                                                                                             │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Author Details  ─────────────╭───────────────────────────────────  Details  ───────────────────────────────────╮───────────────────────────────╮│        
        ││ Books │ History │ Author Searc│Source Title: Test Source Title                                                  │                               ││        
        ││───────────────────────────────│Event Type: grabbed                                                              │───────────────────────────────││        
        ││   Source Title ▼              │Quality: EPUB                                                                    │                               ││        
        ││=> Test Source Title           │Date: 2023-05-20 21:29:16 UTC                                                    │-05-20 21:29:16 UTC            ││        
        ││                               │Indexer:                                                                         │                               ││        
        ││                               │NZB Info URL:                                                                    │                               ││        
        ││                               │Release Group:                                                                   │                               ││        
        ││                               │Age: 0 days                                                                      │                               ││        
        ││                               │Published Date: 1970-01-01 00:00:00 UTC                                          │                               ││        
        ││                               │Download Client:                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               ╰─────────────────────────────────────────────────────────────────────────────────╯                               ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
