src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_AuthorHistorySortPrompt_1.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Overview: some interesting description of the authorHe was born in Madison, Wisconsin: a city he has never really left.His first novel took him    │        
        │seven years to finish.                                                                                                                             │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Author Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│        
        ││ Books │ History │ Author Search                                                                                                                 ││        
        ││─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────││        
        ││   Source Title                                           Event Type                   Quality                Date                               ││        
        ││=> Test Source Title                                      grabbed                      EPUB                   2023-05-20 21:29:16 UTC            ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                          ╭───────────────────────────╮                                                          ││        
        ││                                                          │Something                  │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          │                           │                                                          ││        
        ││                                                          ╰───────────────────────────╯                                                          ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
